# subnyquist-spectrum-aoa

./: .gitignore  README.md  pyproject.toml
configs/: p0_3_sampling_rate_search.yaml  p0_4_oracle_doa.yaml
docs/: 00_research_brief.md  01_problem_definition.md  02_method_design.md  03_experiment_plan.md  04_decisions.md  05_project_status.md  06_experiment_log.md  07_results_summary.md  08_literature_matrix.md
results/e1_p0_2_diagnostic_200_250_300mhz/: identifiability_map.csv  summary.txt
results/p0_3_sampling_rate_search/: all_combinations.csv  grid_details_200.csv  grid_details_200_250.csv  grid_details_200_250_300.csv  grid_details_20_25.csv  grid_details_20_25_32.csv  grid_details_20_25_32_40.csv  intermediate.jsonl  pareto_front.csv  recommended_combinations.csv  summary.md
results/p0_4_oracle_doa/: array_ablation_results.csv  fixed_duration_results.csv  fixed_snapshot_results.csv  frequency_mismatch_results.csv  noiseless_sanity.csv  nyquist_results.csv  summary.md
scripts/: run_identifiability_map.py  run_p0_3_sampling_rate_search.py  run_p0_4_oracle_doa.py
src/specaoa/: __init__.py  covariance.py  crb.py  doa.py  identifiability.py  margins.py  metrics_doa.py  sampling_rate_search.py  simulation.py
tests/: test_doa_oracle.py  test_identifiability.py  test_margin_metrics.py  test_sampling_rate_search.py  test_simulation.py
